Trying to fix bad show on iOS

--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@
 .rainbowLoad{
 	height:120vh;
 	animation: rainbowLoad 5s infinite alternate;
+	color: #EEEEEE;
+	text-align: center;
 }
 
 @keyframes rainbowLoad {
@@ -75,6 +77,7 @@
 	background: rgb(209,211,255);
 	/* box-shadow: 0 -20px 10px 0 black; */
 	animation: rainbowLoad 20s infinite alternate;
+	box-shadow: inset 0 -100vh 100vh 20vh rgba(30,106,195,1);
 }
 
 
@@ -96,7 +99,7 @@
 	background: rgb(209,211,255);
 	background: linear-gradient(180deg, rgba(209,211,255,1) 0%, rgba(30,106,195,1) 100%);
 	/* box-shadow: 0 -20px 10px 0 black; */
-	box-shadow: 0 100vh 100vh 20vh rgba(30,106,195,1);
+	
 }
 
 
@@ -239,6 +242,7 @@ top: 0;
 	height: 100vh;
 	position: absolute;
 	top: 0;
+	left: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
